	Info and backup only: "install.sh"; Force full backup: "install.sh backup"
	Dry run (skip erase/flash/write): "install.sh nobackup noinfo install dryrun"


Changelog 1.0.11 :
==================
* new: network config scripts, wireless modules (2.6.26), firmware (hotplug) - thanks to djpety
* new: file manager in webui (or in web browser on TV screen) - thanks to xeros
! new: special lginit partition for FW 3.33.xx, 3.37.xx, 4.01.2x, 4.60.xx (please ask howto)
! fix: install.sh - full backup before first install (please check and if missing - do full backup)
* more: djmount now with new upnp lib; modules/modprobe changes - few usb2net adapters could need re-config
* extroot: extract archive (ext2/3 partition) and make a sym.link in /lg/user/extroot
* auto-restore nvram if file exsts /lg/user/mtd10_nvram_auto.gz
-  two backup files are auto saved in /lg/user and /lg/cmn_data: file name "mtd10_nvram.gz"
-  for new/fresh backup: rename/remove old backup file(s) and restart TV using remote control
# for adventurers: custom kernel image is ready (it works hehe) and compat-wireless modules
# more: DFB examples (links in text mode) - check "Dfb" alias and "Extdfb" function in /etc/profile
# and: input modules (dev.nodes, kbd_mode); SDL and examples; scummvm (lure)

Changelog 1.0.10 :
==================
* New webui pages: Logs, Services, Remote, RELEASE. Boot and RELEASE config options
  are added to Tools page. You can extract new LGMOD version and try before install.
* Services: ssh/dropbear, syslogd; Modules: nfs version 3 (better speed)
* Auto mount netcast from /mnt/usb#/Drive#/LGMOD_S7/contents (and cache folder)
- netcast from "7cast" archive works nice. It is not included in LGMOD zip
* OPENRELEASE by rtokarev: telnet to RELEASE (on port 2323 - tmux is not needed now),
  remap remote control buttons, "server" mode (soft_poweroff) and more...
* Added tmux. RELEASE/TV could be started inside. You can send keys and control TV remotely