@@ -7,6 +7,7 @@
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
 # - vosd4_select - enable/disable vosd[4]
+# - games_menu - open games menu
 
 K_ENERGY_SAVING = default
 #K_ENERGY_SAVING = screen_mute
@@ -17,6 +18,8 @@ K_INPUT = default
 K_RATIO = default
 #K_RATIO = SYSTEM:/home/lgmod/key_kill-stagecraft.sh
 #K_RATIO = SYSTEM:/home/lgmod/key_dfbterm.sh
+#K_RATIO = SYSTEM:/home/lgmod/key_dfbterm_links.sh
+#K_RATIO = SYSTEM:/home/lgmod/key_links.sh
 K_TV_RAD = default
 #K_TV_RAD = K_IN_START
 K_Q_MENU = default
@@ -29,6 +32,7 @@ K_RIGHT = default
 K_OK = default
 K_RETURN_EXIT = default
 K_INFO = default
+#K_INFO = games_menu
 K_AV_MODE = default
 K_VOL_UP = default
 K_VOL_DOWN = default
